--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'war'
 
 idea {
     project {
-        jdkName = '1.6'
-        languageLevel = '1.6'
+        jdkName = '1.7'
+        languageLevel = '1.7'
     }
 }
 
@@ -49,12 +49,16 @@ dependencies {
 
     compile "joda-time:joda-time:2.3"
     compile 'org.springframework:spring-context:4.0.0.RELEASE'
-    compile 'org.springframework:spring-test:4.0.0.RELEASE'
+    compile 'org.springframework:spring-tx:4.0.0.RELEASE'
     compile 'org.hibernate:hibernate-entitymanager:4.2.8.Final'
 
     compile 'javax.inject:javax.inject:1'
+    compile 'org.apache.tomcat:tomcat-dbcp:7.0.47'
 
     testCompile 'junit:junit:4.11'
+    testCompile 'org.springframework:spring-test:4.0.0.RELEASE'
+
+
 //    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 
 }
