--- a/build.gradle
+++ b/build.gradle
@@ -49,14 +49,20 @@ dependencies {
 
     compile "joda-time:joda-time:2.3"
     compile 'org.springframework:spring-context:4.0.0.RELEASE'
+    compile 'org.springframework:spring-beans:4.0.0.RELEASE'
     compile 'org.springframework:spring-tx:4.0.0.RELEASE'
+    compile 'org.springframework:spring-orm:4.0.0.RELEASE'
+
     compile 'org.hibernate:hibernate-entitymanager:4.2.8.Final'
 
     compile 'javax.inject:javax.inject:1'
-    compile 'org.apache.tomcat:tomcat-dbcp:7.0.47'
+    compile 'org.apache.tomcat:tomcat-jdbc:7.0.47'
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.springframework:spring-test:4.0.0.RELEASE'
+
+    runtime 'mysql:mysql-connector-java:5.1.28'
+
 
 
 //    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
